--- a/angular-route.html
+++ b/angular-route.html
@@ -11,6 +11,7 @@
 			float: left;
 			width: 13%;
 			border-right: 1px solid red;
+			border-bottom: 1px solid #456;
 		}
 		#right{
 			width: 80%;
@@ -88,17 +89,16 @@
  </div>
 	</div>
 	<script type="text/javascript">
-	  Date.prototype.format = function(format)   
-{   
-   var o = {   
-     "M+" : this.getMonth()+1, //month   
-     "d+" : this.getDate(),    //day   
-     "h+" : this.getHours(),   //hour   
-     "m+" : this.getMinutes(), //minute   
-     "s+" : this.getSeconds(), //second   
-     "q+" : Math.floor((this.getMonth()+3)/3), //quarter   
-     "S" : this.getMilliseconds() //millisecond   
-   }   
+	  Date.prototype.format = function(format) {   
+	   var o = {   
+	     "M+" : this.getMonth()+1, //month   
+	     "d+" : this.getDate(),    //day   
+	     "h+" : this.getHours(),   //hour   
+	     "m+" : this.getMinutes(), //minute   
+	     "s+" : this.getSeconds(), //second   
+	     "q+" : Math.floor((this.getMonth()+3)/3), //quarter   
+	     "S" : this.getMilliseconds() //millisecond   
+	   }   
    if(/(y+)/.test(format)) format=format.replace(RegExp.$1,   
      (this.getFullYear()+"").substr(4 - RegExp.$1.length));   
    for(var k in o)if(new RegExp("("+ k +")").test(format))   
@@ -163,7 +163,12 @@ app.controller("DetailController",function($scope,$routeParams){
 app.controller('AddController',function($scope,$location){
 	$scope.title='';
 	$scope.content= '';
+
 	$scope.add = function(){
+		if($scope.title===""||$scope.content===""){
+		alert("不能留空");
+		return;
+	}
 		newsList.push({
 			id:newsList.length+1,
 			title:$scope.title,
